--- a/iOS/airbnb/airbnb/Base.lproj/Main.storyboard
+++ b/iOS/airbnb/airbnb/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aDA-LM-0BT">
                                 <rect key="frame" x="0.0" y="114" width="414" height="782"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="room" translatesAutoresizingMaskIntoConstraints="NO" id="t9Y-hQ-X3g">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="room" translatesAutoresizingMaskIntoConstraints="NO" id="t9Y-hQ-X3g">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="420"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="420" id="vop-j6-ras"/>
@@ -69,7 +69,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
-                                            <segue destination="BIp-4u-ilw" kind="show" id="MlV-SY-ozy"/>
+                                            <segue destination="BIp-4u-ilw" kind="show" id="bbK-0P-Onm"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -107,7 +107,7 @@
             </objects>
             <point key="canvasLocation" x="1050.7246376811595" y="118.52678571428571"/>
         </scene>
-        <!--숙소 찾기-->
+        <!--Search View Controller-->
         <scene sceneID="4Tb-H8-Ada">
             <objects>
                 <viewController restorationIdentifier="SearchViewController" storyboardIdentifier="SearchViewController" id="BIp-4u-ilw" customClass="SearchViewController" customModule="airbnb" customModuleProvider="target" sceneMemberID="viewController">
@@ -115,48 +115,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="CBn-rI-pTb">
-                                <rect key="frame" x="0.0" y="88" width="414" height="70"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="70" id="U6Y-S9-N5R"/>
-                                </constraints>
-                                <color key="barTintColor" systemColor="systemGray6Color"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VtW-5E-qDv">
-                                <rect key="frame" x="0.0" y="158" width="414" height="704"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="XJT-z7-Yde">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="81a-3n-rLc">
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="3vE-sK-Qth">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ubF-Eu-fc3">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Z8f-M9-XYw">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="hpI-Zb-qta">
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="oeb-yg-jGc">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </collectionViewCellContentView>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="delegate" destination="BIp-4u-ilw" id="gdR-EB-dqL"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="HI3-tJ-i8x"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="HI3-tJ-i8x" firstAttribute="bottom" secondItem="VtW-5E-qDv" secondAttribute="bottom" id="02c-r5-prs"/>
-                            <constraint firstItem="VtW-5E-qDv" firstAttribute="leading" secondItem="HI3-tJ-i8x" secondAttribute="leading" id="7ze-jH-j1Y"/>
-                            <constraint firstItem="VtW-5E-qDv" firstAttribute="top" secondItem="CBn-rI-pTb" secondAttribute="bottom" id="JdN-nF-Nz1"/>
-                            <constraint firstItem="HI3-tJ-i8x" firstAttribute="trailing" secondItem="VtW-5E-qDv" secondAttribute="trailing" id="Ras-oI-2ru"/>
-                            <constraint firstItem="CBn-rI-pTb" firstAttribute="leading" secondItem="HI3-tJ-i8x" secondAttribute="leading" id="Y9U-K2-Un0"/>
-                            <constraint firstItem="CBn-rI-pTb" firstAttribute="top" secondItem="HI3-tJ-i8x" secondAttribute="top" id="Yaa-9G-j66"/>
-                            <constraint firstItem="HI3-tJ-i8x" firstAttribute="trailing" secondItem="CBn-rI-pTb" secondAttribute="trailing" id="cva-9R-2Ty"/>
+                            <constraint firstAttribute="bottom" secondItem="XJT-z7-Yde" secondAttribute="bottom" id="A9a-e8-MGF"/>
+                            <constraint firstItem="XJT-z7-Yde" firstAttribute="leading" secondItem="HI3-tJ-i8x" secondAttribute="leading" id="DDW-5f-yku"/>
+                            <constraint firstItem="XJT-z7-Yde" firstAttribute="top" secondItem="HI3-tJ-i8x" secondAttribute="top" id="G9S-y7-cGm"/>
+                            <constraint firstItem="HI3-tJ-i8x" firstAttribute="trailing" secondItem="XJT-z7-Yde" secondAttribute="trailing" id="IOC-zx-bax"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="숙소 찾기" id="Pp4-Ir-axs">
+                    <navigationItem key="navigationItem" id="Pp4-Ir-axs">
                         <barButtonItem key="rightBarButtonItem" style="plain" id="ZYz-La-bFV">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="h1B-ml-ZwA">
                                 <rect key="frame" x="348" y="7" width="46" height="30"/>
@@ -170,8 +162,7 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="resultCollectionView" destination="VtW-5E-qDv" id="AV5-fK-NAH"/>
-                        <outlet property="searchBar" destination="CBn-rI-pTb" id="Jho-qP-mH6"/>
+                        <outlet property="resultCollectionView" destination="XJT-z7-Yde" id="N39-Cl-l1l"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cP8-RA-BXg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -206,7 +197,7 @@
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
-                                    <outlet property="dataSource" destination="K6L-sW-ZbD" id="xr7-ev-3DU"/>
+                                    <outlet property="dataSource" destination="K6L-sW-ZbD" id="yjB-WP-Z4c"/>
                                     <outlet property="delegate" destination="K6L-sW-ZbD" id="Rtk-kI-ggY"/>
                                 </connections>
                             </collectionView>
