--- a/iOS/airbnb/airbnb/Main/View/LivingNowSectionCell.xib
+++ b/iOS/airbnb/airbnb/Main/View/LivingNowSectionCell.xib
@@ -10,20 +10,21 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="LivingNowSectionCell" reuseIdentifier="LivingNowSectionCell" id="gTV-IL-0wX" customClass="LivingNowSectionCell" customModule="airbnb" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="250" height="350"/>
+            <rect key="frame" x="0.0" y="0.0" width="290" height="350"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="250" height="350"/>
+                <rect key="frame" x="0.0" y="0.0" width="290" height="350"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bep-ka-ZnC">
-                        <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bep-ka-ZnC">
+                        <rect key="frame" x="20" y="0.0" width="270" height="250"/>
                         <constraints>
+                            <constraint firstAttribute="width" constant="270" id="462-Gg-YuJ"/>
                             <constraint firstAttribute="height" constant="250" id="Uqc-YE-HSc"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vMm-Dd-seA">
-                        <rect key="frame" x="20" y="270" width="210" height="52"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vMm-Dd-seA">
+                        <rect key="frame" x="20" y="270" width="250" height="52"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="52" id="5Ol-7i-CGP"/>
                         </constraints>
@@ -38,17 +39,17 @@
             <constraints>
                 <constraint firstItem="vMm-Dd-seA" firstAttribute="leading" secondItem="ZTg-uK-7eu" secondAttribute="leading" constant="20" id="6jF-CD-tIs"/>
                 <constraint firstItem="ZTg-uK-7eu" firstAttribute="trailing" secondItem="vMm-Dd-seA" secondAttribute="trailing" constant="20" id="CwP-Oq-oXS"/>
-                <constraint firstItem="bep-ka-ZnC" firstAttribute="trailing" secondItem="ZTg-uK-7eu" secondAttribute="trailing" id="X0g-q1-4ij"/>
-                <constraint firstItem="bep-ka-ZnC" firstAttribute="leading" secondItem="ZTg-uK-7eu" secondAttribute="leading" id="cf8-Pw-PA1"/>
+                <constraint firstItem="ZTg-uK-7eu" firstAttribute="trailing" secondItem="bep-ka-ZnC" secondAttribute="trailing" id="Qqd-D2-1a1"/>
                 <constraint firstItem="vMm-Dd-seA" firstAttribute="top" secondItem="bep-ka-ZnC" secondAttribute="bottom" constant="20" id="mgz-6T-hOb"/>
+                <constraint firstItem="bep-ka-ZnC" firstAttribute="leading" secondItem="ZTg-uK-7eu" secondAttribute="leading" constant="20" id="uiM-pr-d5i"/>
                 <constraint firstItem="bep-ka-ZnC" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="wJW-GZ-Uhc"/>
             </constraints>
-            <size key="customSize" width="424" height="369"/>
+            <size key="customSize" width="475" height="382"/>
             <connections>
                 <outlet property="livingNowDescription" destination="vMm-Dd-seA" id="Pl1-pk-Qtf"/>
                 <outlet property="livingNowImageView" destination="bep-ka-ZnC" id="HS4-Cc-8vI"/>
             </connections>
-            <point key="canvasLocation" x="155.07246376811597" y="212.27678571428569"/>
+            <point key="canvasLocation" x="192.0289855072464" y="207.92410714285714"/>
         </collectionViewCell>
     </objects>
 </document>
