[#7] fix: main 부분 searchbar 삭제

--- a/iOS/airbnb/airbnb/Base.lproj/Main.storyboard
+++ b/iOS/airbnb/airbnb/Base.lproj/Main.storyboard
@@ -17,23 +17,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="1400"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar clipsSubviews="YES" contentMode="redraw" fixedFrame="YES" placeholder="어디로 여행가세요?" translatesAutoresizingMaskIntoConstraints="NO" id="AUa-4l-iQn">
-                                <rect key="frame" x="0.0" y="58" width="414" height="56"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="barTintColor" systemColor="systemGray6Color"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
-                                        <color key="value" systemColor="systemGray6Color"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
-                                        <integer key="value" value="1"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="mV0-RW-ikI"/>
-                                </connections>
-                            </searchBar>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lFR-RF-k3v">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="1400"/>
                                 <subviews>
@@ -208,8 +191,8 @@
                                     <constraint firstAttribute="bottom" secondItem="etL-GL-HTw" secondAttribute="bottom" id="NLS-xs-9pB"/>
                                     <constraint firstAttribute="trailing" secondItem="etL-GL-HTw" secondAttribute="trailing" id="SJy-rZ-uTy"/>
                                     <constraint firstItem="etL-GL-HTw" firstAttribute="width" secondItem="lFR-RF-k3v" secondAttribute="width" id="VXN-1z-tYX"/>
-                                    <constraint firstItem="etL-GL-HTw" firstAttribute="top" secondItem="lFR-RF-k3v" secondAttribute="top" id="Vx0-aV-7j7"/>
                                     <constraint firstItem="etL-GL-HTw" firstAttribute="leading" secondItem="lFR-RF-k3v" secondAttribute="leading" id="cdN-ze-LN9"/>
+                                    <constraint firstAttribute="top" secondItem="etL-GL-HTw" secondAttribute="top" id="thC-tJ-mY3"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="aRT-Ii-TCn"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="k8I-xO-fja"/>
@@ -232,7 +215,6 @@
                         <outlet property="arroundSectionCollectionView" destination="ZgY-1N-apa" id="Gho-Ly-qtJ"/>
                         <outlet property="livingNowCollectionView" destination="ZO1-Qy-4nn" id="Ba5-JX-eTL"/>
                         <outlet property="scrollviewHeight" destination="65y-9L-Pbk" id="yYl-u6-e1S"/>
-                        <outlet property="searchBar" destination="AUa-4l-iQn" id="8I0-A1-lZQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
